# granola-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
.claude/: settings.local.json
.claude/skills/: using-granola-cli.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2025-11-15-granola-cli-design.md  2025-11-15-granola-cli-implementation.md
src/: cache.rs  error.rs  main.rs  models.rs
src/commands/: details.rs  documents.rs  mod.rs  search.rs  transcript.rs  workflow.rs
tests/: integration_test.rs
